# CadHomework

./: CMakeLists.txt  README  build_and_run  make_project_for_eclipse.sh
include/: EulerOperator.h  Root.h  SolidSet.h
include/geometry/: Curve.h  GeometryBase.h  Point.h  Surface.h
include/topology/: Edge.h  Face.h  HalfEdge.h  Loop.h  Solid.h  TopologyBase.h  Vertex.h
src/: .SolidSet.cpp.swp  .main.cpp.swp  CMakeLists.txt  EulerOperator.cpp  Root.cpp  SolidSet.cpp  main.cpp
src/geometry/: Curve.cpp  GeometryBase.cpp  Point.cpp  Surface.cpp
src/topolog/: Edge.cpp  Face.cpp  HalfEdge.cpp  Loop.cpp  Solid.cpp  TopologyBase.cpp  Vertex.cpp
